Avoid flickering animations
Do not show the bodies horizontal scrollbar - it appears only during the
view-frame enter/leave animation where the new and old view are shown side
by side to animate them.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,11 +6,14 @@ html {
 
 /* TODO: SASS */
 
+body {
+    overflow-x:hidden;
+}
+
 .view-frame {
     position: absolute;
     top:0; right:0; bottom:0; left:0;
 }
-
 
 .down .view-frame.ng-enter {
     transform:translateX(100%);
